# ParsingAlgo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  install.sh  main  run_tests.sh
include/: algorithms.hpp  automata.hpp  automata_utils.hpp  grammar.hpp  rule.hpp  situation.hpp  transition.hpp
src/: CMakeLists.txt  algorithms.cpp  automata.cpp  automata_utils.cpp  grammar.cpp  main.cpp  rule.cpp  situation.cpp  transition.cpp
test/: CMakeLists.txt  test_algorithms.cpp  test_automata_utils.cpp  test_grammar.cpp  test_rule.cpp
